--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,63 @@
 version: "2.1"
 services:
-  register-auth-server:
-    image: "huyinghuan/docker-registry-auth:latest"
-    container_name: "registry-auth-server"
+  oauth:
+    image: "docker.hunantv.com/huyinghuan/oauth:latest"
+    container_name: "oauth"
     restart: always
     ports: 
       - "8000:8000"
-    volumes:
-      - /Volumes/Macintosh HD/Extends/data/docker_registry/certs/auth.crt:/go/src/oauth/certs/auth.crt
-      - /Volumes/Macintosh HD/Extends/data/docker_registry/certs/auth.key:/go/src/oauth/certs/auth.key
     environment:
-      - REGISTRY_AUTH_TOKEN_ISSUER="Auth Service"
-      - REGISTRY_AUTH_TOKEN_EXPIRATION=900
-      - REGISTRY_AUTH_TOKEN_DEBUG=false
+      - OPENAUTH_DEBUG=false
       #admin account username
-      - REGISTRY_AUTH_TOKEN_ACCOUNT_USER=admin
+      - OPENAUTH_ADMIN=admin
       #admin account password
-      - REGISTRY_AUTH_TOKEN_ACCOUNT_PASS=12345678
-      #account registry api path
-      - REGISTRY_AUTH_TOKEN_ACCOUNT_API=__registry
+      - OPENAUTH_ADMIN_PASS=12345678
       #account database mysql
-      - REGISTRY_AUTH_TOKEN_ACCOUNT_DATABASE="test:12345678@tcp(db:3306)/oauth"
+      - OPENAUTH_DATABASE=root:12345678@tcp(mysql:3306)/oauth
+      #redis
+      - OPENAUTH_REDIS_CLIENT_ADDR=redis:6379
+      #- OPENAUTH_REDIS_CLIENT_PASS=
+      #- OPENAUTH_REDIS_CLIENT_DB=
+    networks: 
+      oauth:
+    depends_on:
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+  mysql:
+    image: mysql:latest
+    restart: always
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_ROOT_PASSWORD: 12345678
+      MYSQL_DATABASE: oauth
+    volumes:
+      - /Volumes/Macintosh HD/Extends/data/mysql-oauth:/var/lib/mysql
+    healthcheck:
+      test: "/usr/bin/mysql --user=root --password=12345678 --execute \"SHOW DATABASES;\""
+      interval: 2s
+      timeout: 20s
+      retries: 10
+    networks:
+      oauth:
+  redis:
+    image: redis:latest
+    restart: always
+    volumes:
+      - /Volumes/Macintosh HD/Extends/data/redis-oauth:/data
+    healthcheck:
+      test: "redis-cli ping"
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      oauth:
+networks: 
+  oauth:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.16.66.0/24 
+          gateway: 172.16.66.1
