--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
       #- OPENAUTH_REDIS_CLIENT_PASS=
       #- OPENAUTH_REDIS_CLIENT_DB=
       - OPENAUTH_OPEN_REGISTER=true
+      - OPENAUTH_OPEN_APP_REGISTER=true
     networks: 
       oauth:
     depends_on:
