--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - OPENAUTH_ADMIN=admin
       #admin account password
       - OPENAUTH_ADMIN_PASS=12345678
+      - OPENAUTH_ADMIN_RESET_ONRESTART=false
       #account database mysql
       - OPENAUTH_DATABASE=root:12345678@tcp(mysql:3306)/oauth
       #redis
