--- a/web/package.json
+++ b/web/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.24.1",
+    "@ant-design/icons": "^4.0.6",
+    "antd": "^4.1.1",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
-    "react": "^16.10.2",
+    "react": "^16.13.1",
     "react-app-rewired": "^2.1.3",
-    "react-dom": "^16.10.2",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
