--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "sass": "^1.26.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
